2005-12-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/musicxml2ly.py (NonDentedHeadingFormatter.format_headi):
	option formatting, lilypond style.

	* python/musicexp.py: grab from Ikebana: a library for composing
	ly music expressions. 
	(Output_printer): class for advanced .ly printing.
	(eg. tupletting) 

	* python/musicxml.py: new file. Read MusicXML MiniDOM tree, and
	convert to pythonesque structure.

	* python/rational.py: PD rational number class.

	* Documentation/user/converters.itely (Invoking musicxml2ly):  new node.

2005-12-04  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/part-combine-iterator.cc: Minor bugfix
	
	* THANKS: Update bughunters

2005-12-02  Werner Lemberg  <wl@gnu.org>

	* mf/README: Document process for proper mf2pt1 conversion.

	* mf/feta-beugel.mf (draw_brace): Fix path to assure clean
	overlapping.

	* mf/feta-harmonica.mf: Removed.  Unused.

2005-12-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (do_file): fix thinkos.

2005-12-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/GNUmakefile ($(outdir)/FlexLexer.h):
	($(outdir)/parser.cc): 
	($(outdir)/lexer.cc): Bugfix: depend on config.h.

2005-11-30  Pedro Kröger  <kroeger@pedrokroeger.net>

	* ly/titling-init.ly (tagline): it should be a space between
	"Music engraving by LilyPond" and the version number.

2005-12-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.7.20

2005-11-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (pad-to-box): new markup command.

	* scm/define-grobs.scm (all-grob-descriptions): set thickness to
	1.0.
	(all-grob-descriptions): don't shift RehearsalMark arbitrarily.

2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (LINK_GXX_STATICALLY): remove kpathsea checks.

	* kpath-guile/: remove directory

	* scm/kpathsea.scm (ly:kpathsea-expand-variable): new
	file. Encapsulate kpathsea using commandline tools.
